fix CSS flex positioning of comics, edit text and colors

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,19 +1,16 @@
 <%- include('../partials/head') -%> <%- include('../partials/nav') -%>
 <div class="content-container">
-  <h1>COMIC COLLECTION</h1>
+  <h1>COMICS COLLECTION</h1>
   <p>
-    Comic Collection is a list of graphic novels read by Mariessa. The site is
-    intended to display comic book covers along with information about each
-    book, including the author, a rating, and other details about the graphic
-    novel. Browse through the complete collection below. Click on the cover
-    image or the Details link to see even more information for each graphic
-    novel including the publisher, genre, number of pages, and a brief synopsis.
-    The About page includes meta information about this collection. Login is
-    only available to the site administrator at this time.
+    Welcome! Comic Collection is a list of graphic novels read by Mariessa. The
+    site is intended to display comic book covers along with information about
+    each book, including the author, a rating, and other details about the
+    graphic novel. Login is only available to the site administrator at this
+    time.
   </p>
 </div>
 <div class="content-container">
-  <h2>COMPLETE COMIC COLLECTION</h2>
+  <h2>COMPLETE COMICS COLLECTION</h2>
   <!-- comic -->
   <div class="flex-container">
     <% for (let comic of data) { %>
@@ -26,7 +23,7 @@
         />
       </a>
       <br />
-      <p>
+      <p class="comic-title">
         <i><%=comic.title %> </i>
         <br />
         <%= comic.author %>
