--- a/public/images/styles/styles.css
+++ b/public/images/styles/styles.css
@@ -1,10 +1,11 @@
 :root {
-  --Teal: #5fff94;
+  --Teal: #fa4078;
   --Light-Teal: #ffcd44;
   --Yellow: #fccf14;
   --Blue: #fd5f2f;
   --Grey: #c2c2c2;
   --White: #ffffff;
+  --DarkGrey: #3d3d3d;
 }
 
 * {
@@ -107,7 +108,7 @@ p {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: center;
   margin-left: 4rem;
   margin-right: 4rem;
@@ -139,7 +140,7 @@ p {
 
 h1,
 h2 {
-  color: var(--Blue);
+  color: var(--DarkGrey);
   text-align: center;
   font-family: "Fredericka the Great", cursive;
 }
@@ -187,6 +188,9 @@ textarea {
   vertical-align: top;
 }
 
+.comic-title {
+  width: 200px;
+}
 /*--Table styling--*/
 
 table {
@@ -230,6 +234,7 @@ button {
   display: block;
   width: auto;
   margin: auto;
+  margin-top: 2rem;
   font-size: 1rem;
 }
 
@@ -244,16 +249,16 @@ footer {
   padding-top: 1rem;
   padding-left: 0.5rem;
   padding-bottom: 2rem;
-  border-top: var(--Yellow) 5px solid;
+  border-top: var(--White) 5px solid;
   margin-top: 5rem;
   font-family: "Fredericka the Great", cursive;
   width: 100vw;
 }
 
-.footer-img {
+/* .footer-img {
   width: 18rem;
   margin-top: 0.5rem; /* pushes up img to align correctly*/
-}
+/* } */
 
 footer a {
   color: var(--White);
